2007-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (add-log-current-defun): Fix thinko w.r.t derived-mode-p.

2007-09-20  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-validate-buffer): Use paragraph
	motion functions, rather than hard-coding "\n\n".
	(tex-validate-region): Check for eobp, to speed up.
	(tex-next-unmatched-end): Doc fix.

2007-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (auto-mode-alist): Use archive-mode for .rar files.

	* international/mule.el (auto-coding-alist): Rar archives are binary.

	* arc-mode.el: Add basic support for Rar.
	(archive-find-type): Recognize Rar's signature.
	(archive-desummarize): New fun.
	(archive-summarize): Use it to restore the buffer's data in case
	someone wants to switch to some other major mode.
	(archive-resummarize): Use it as well.
	(archive-rar-summarize, archive-rar-extract): New functions.

	* filesets.el: Remove spurious * in docstrings.
	(filesets-running-xemacs): Remove.  Use (featurep 'xemacs) instead.
	(filesets-conditional-sort): Remove unused arg `simply-do-it'.
	(filesets-ingroup-collect): Remove unused arg `depth'.
	(filesets-update): Remove unused arg `version'.

	* finder.el (finder-compile-keywords): Fix up comment style.
	(finder-mouse-face-on-line): previous-line -> forward-line.

	* recentf.el: Remove spurious * in docstrings.
	(recentf-save-list): Fix up comment style.

	* progmodes/octave-mod.el: Remove spurious * in docstrings.
	(octave-mode-map): Move init into declaration and remove \t binding.
	(octave-mode-startup-message): Remove unused var.
	(octave-scan-blocks): Remove unused arg `from'.
	(octave-forward-block, octave-down-block, octave-up-block):
	Update callers.

	* progmodes/meta-mode.el (meta-mode-syntax-table): Move init into decl.
	(meta-mode-map): Likewise and remove \t binding.

	* net/snmp-mode.el: Remove spurious * in docstrings.
	(snmp-rfc1155-types, snmp-rfc1213-types, snmp-rfc1902-types)